manifests/k8s/ethereum/k8s-ethereum-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ethereum-ingress
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
